[package]
name = "axum-server-timeout"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
axum = "0.7.5"
axum-server = "0.6.0"
hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
rocket = "0.5.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
